feat: create game

--- a/src/web-client/src/index.scss
+++ b/src/web-client/src/index.scss
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.wrapper {
+  &--centered {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: green;
+   width: 25vw;
+   height: 50vh;
+   
+   text-align: center;
+  }
+}
