feat: static game board

--- a/src/web-client/src/index.scss
+++ b/src/web-client/src/index.scss
@@ -22,4 +22,10 @@ code {
 
     text-align: center;
   }
+
+  &--flex {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 }
