--- a/src/web-client/src/components/pages/Game/Game.scss
+++ b/src/web-client/src/components/pages/Game/Game.scss
@@ -1,14 +1,16 @@
 .game {
-  width: 95vw;
-  height: 90vh;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  &__field {
+    width: 95vw;
+    height: 90vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-  transform: translate(-50%, -50%);
-  background-color: green;
+    transform: translate(-50%, -50%);
+    background-color: green;
+  }
 }
