fix: only swap dices after roll

--- a/src/web-client/src/components/pages/Game/components/Dice/dice.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/dice.scss
@@ -4,8 +4,10 @@
   border: 2px solid gray;
   background-color: #fff;
 
-  &:hover {
-    cursor: pointer;
+  &--toggleable {
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &--kept {
