--- a/src/web-client/src/components/pages/Dashboard/components/Navigation/Navigation.scss
+++ b/src/web-client/src/components/pages/Dashboard/components/Navigation/Navigation.scss
@@ -14,7 +14,7 @@
     &:hover {
       cursor: pointer;
 
-      .menu__item__text {
+      .navigation__item__text {
         color: orange;
       }
     }
