consume endpoints, rearrange game components

--- a/src/web-client/src/components/pages/Game/components/PlayerArea/PlayerArea.scss
+++ b/src/web-client/src/components/pages/Game/components/PlayerArea/PlayerArea.scss
@@ -7,7 +7,7 @@
   min-height: 335px;
 
   &--self {
-    .player {
+    .game-player {
       order: 3;
       align-self: flex-end;
       justify-content: flex-end;
