--- a/src/web-client/src/components/pages/Game/components/Dice/dice.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/dice.scss
@@ -1,8 +1,18 @@
 .dice {
-  width: 30px;
-  padding: 20px;
-  border: 2px solid gray;
-  background-color: #fff;
+  width: 60px;
+  height: 60px;
+  margin: 15px;
+  position: relative;
+  transform-style: preserve-3d;
+  user-select: none;
+
+  > div {
+    height: 60px;
+    width: 60px;
+    position: absolute;
+    background: #fff;
+    border: 2px solid black;
+  }
 
   &--toggleable {
     &:hover {
@@ -17,10 +27,225 @@
   }
 
   &--locked {
-    background: lightgrey;
+    > div {
+      background: lightgrey;
+    }
   }
 
   &--tokens {
-    border: 2px dashed blue;
+    > div {
+      border: 2px solid #e67e22;
+    }
+  }
+
+  img {
+    width: 30px;
+    padding: 15px;
+    position: absolute;
+  }
+
+  .front {
+    transform: rotateY(0deg) translateZ(30px);
+  }
+  .back {
+    transform: rotateX(180deg) translateZ(30px);
+
+    img {
+      // todo: smeerlap
+      transform: rotateX(180deg) rotateY(180deg);
+    }
+  }
+  .right {
+    transform: rotateY(90deg) translateZ(30px);
+  }
+  .left {
+    transform: rotateY(-90deg) translateZ(30px);
+  }
+  .top {
+    transform: rotateX(90deg) translateZ(30px);
+  }
+  .bottom {
+    transform: rotateX(-90deg) translateZ(30px);
+  }
+}
+
+.melee-attack {
+  transform-style: preserve-3d;
+  animation-name: rotate1;
+  animation-iteration-count: 1;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+.token-steal {
+  transform-style: preserve-3d;
+  animation-name: rotate3;
+  animation-iteration-count: 1;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+.ranged-block {
+  transform-style: preserve-3d;
+  animation-name: rotate4;
+  animation-iteration-count: 1;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+.melee-block {
+  transform-style: preserve-3d;
+  animation-name: rotate5;
+  animation-iteration-count: 1;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+.ranged-attack {
+  transform-style: preserve-3d;
+  animation-name: rotate6;
+  animation-iteration-count: 1;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes rotate1 {
+  0% {
+    transform: rotateX(90deg) rotateY(90deg) rotateZ(-90deg) translateX(0);
+  }
+  10% {
+    transform: rotateX(-90deg) rotateY(-90deg) rotateZ(90deg) translateX(0);
+  }
+  30% {
+    transform: rotateX(90deg) rotateY(180deg) rotateZ(-90deg) translateX(0);
+  }
+  50% {
+    transform: rotateX(-180deg) rotateY(90deg) rotateZ(360deg) translateX(0);
+  }
+  70% {
+    transform: rotateX(90deg) rotateY(-180deg) rotateZ(-90deg) translateX(0);
+  }
+  90% {
+    transform: rotateX(-90deg) rotateY(-90deg) rotateZ(90deg) translateX(0);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+@keyframes rotate2 {
+  0% {
+    transform: rotateX(-90deg) rotateY(-90deg) rotateZ(360deg) translateX(0);
+  }
+  10% {
+    transform: rotateX(90deg) rotateY(180deg) rotateZ(90deg) translateX(0);
+  }
+  30% {
+    transform: rotateX(90deg) rotateY(-270deg) rotateZ(-90deg) translateX(0);
+  }
+  50% {
+    transform: rotateX(90deg) rotateY(90deg) rotateZ(-360deg) translateX(0);
+  }
+  70% {
+    transform: rotateX(-18deg) rotateY(-180deg) rotateZ(-90deg) translateX(0);
+  }
+  90% {
+    transform: rotateX(180deg) rotateY(-90deg) rotateZ(-360deg) translateX(0);
+  }
+  100% {
+    transform: rotateY(90deg);
+  }
+}
+@keyframes rotate3 {
+  0% {
+    transform: rotateX(-180deg) rotateY(-90deg) rotateZ(90deg) translateX(0);
+  }
+  10% {
+    transform: rotateX(-90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
+  }
+  30% {
+    transform: rotateX(180deg) rotateY(-270deg) rotateZ(180deg) translateX(0);
+  }
+  50% {
+    transform: rotateX(90deg) rotateY(90deg) rotateZ(-90deg) translateX(0);
+  }
+  70% {
+    transform: rotateX(18deg) rotateY(270deg) rotateZ(180deg) translateX(0);
+  }
+  90% {
+    transform: rotateX(90deg) rotateY(-180deg) rotateZ(360deg) translateX(0);
+  }
+  100% {
+    transform: rotateX(-90deg);
+  }
+}
+@keyframes rotate4 {
+  0% {
+    transform: rotateX(-180deg) rotateY(-90deg) rotateZ(-90deg) translateX(0);
+  }
+  10% {
+    transform: rotateX(270deg) rotateY(-180deg) rotateZ(360deg) translateX(0);
+  }
+  30% {
+    transform: rotateX(180deg) rotateY(270deg) rotateZ(180deg) translateX(0);
+  }
+  50% {
+    transform: rotateX(-90deg) rotateY(90deg) rotateZ(90deg) translateX(0);
+  }
+  70% {
+    transform: rotateX(18deg) rotateY(-270deg) rotateZ(180deg) translateX(0);
+  }
+  90% {
+    transform: rotateX(-90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
+  }
+  100% {
+    transform: rotateX(90deg);
+  }
+}
+@keyframes rotate5 {
+  0% {
+    transform: rotateX(-180deg) rotateY(-90deg) rotateZ(-180deg) translateX(0);
+  }
+  10% {
+    transform: rotateX(270deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
+  }
+  30% {
+    transform: rotateX(180deg) rotateY(270deg) rotateZ(180deg) translateX(0);
+  }
+  50% {
+    transform: rotateX(-90deg) rotateY(90deg) rotateZ(-90deg) translateX(0);
+  }
+  70% {
+    transform: rotateX(18deg) rotateY(270deg) rotateZ(180deg) translateX(0);
+  }
+  90% {
+    transform: rotateX(90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
+  }
+  100% {
+    transform: rotateY(-90deg);
+  }
+}
+@keyframes rotate6 {
+  0% {
+    transform: rotateX(270deg) rotateY(-90deg) rotateZ(180deg) translateX(0);
+  }
+  10% {
+    transform: rotateX(180deg) rotateY(90deg) rotateZ(360deg) translateX(0);
+  }
+  30% {
+    transform: rotateX(180deg) rotateY(-30deg) rotateZ(-180deg) translateX(0);
+  }
+  50% {
+    transform: rotateX(90deg) rotateY(270deg) rotateZ(-90deg) translateX(0);
+  }
+  70% {
+    transform: rotateX(18deg) rotateY(-180deg) rotateZ(90deg) translateX(0);
+  }
+  90% {
+    transform: rotateX(-90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
+  }
+  100% {
+    transform: rotateX(0deg);
   }
 }
