--- a/src/web-client/src/components/pages/Game/components/Dice/dice.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/dice.scss
@@ -6,9 +6,13 @@
   transform-style: preserve-3d;
   user-select: none;
   animation-iteration-count: 1;
-  animation-duration: 2s;
+  animation-duration: 0.5s;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
+
+  &--no-animate {
+    animation-duration: 0s;
+  }
 
   > div {
     height: 60px;
@@ -69,156 +73,58 @@
 }
 
 .melee-attack {
-  animation-name: rotate1;
-}
-.token-steal {
-  animation-name: rotate3;
-}
-.ranged-block {
-  animation-name: rotate4;
+  animation-name: melee-attack-animation;
 }
 .melee-block {
-  animation-name: rotate5;
+  animation-name: melee-block-animation;
 }
 .ranged-attack {
-  animation-name: rotate6;
+  animation-name: ranged-attack-animation;
+}
+.ranged-block {
+  animation-name: ranged-block-animation;
+}
+.token-steal {
+  animation-name: token-steal-animation;
 }
 
-@keyframes rotate1 {
+@keyframes melee-attack-animation {
   0% {
-    transform: rotateX(90deg) rotateY(90deg) rotateZ(-90deg) translateX(0);
-  }
-  10% {
-    transform: rotateX(-90deg) rotateY(-90deg) rotateZ(90deg) translateX(0);
-  }
-  30% {
-    transform: rotateX(90deg) rotateY(180deg) rotateZ(-90deg) translateX(0);
-  }
-  50% {
-    transform: rotateX(-180deg) rotateY(90deg) rotateZ(360deg) translateX(0);
-  }
-  70% {
-    transform: rotateX(90deg) rotateY(-180deg) rotateZ(-90deg) translateX(0);
-  }
-  90% {
-    transform: rotateX(-90deg) rotateY(-90deg) rotateZ(90deg) translateX(0);
+    transform: rotateX(180deg) rotateY(360deg) rotateZ(0deg) translateX(0);
   }
   100% {
-    transform: rotateY(180deg) rotateZ(-180deg);
+    transform: rotateX(-180deg) rotateY(0deg) rotateZ(0deg) translateX(0);
   }
 }
-@keyframes rotate2 {
+@keyframes melee-block-animation {
   0% {
-    transform: rotateX(-90deg) rotateY(-90deg) rotateZ(360deg) translateX(0);
-  }
-  10% {
-    transform: rotateX(90deg) rotateY(180deg) rotateZ(90deg) translateX(0);
-  }
-  30% {
-    transform: rotateX(90deg) rotateY(-270deg) rotateZ(-90deg) translateX(0);
-  }
-  50% {
-    transform: rotateX(90deg) rotateY(90deg) rotateZ(-360deg) translateX(0);
-  }
-  70% {
-    transform: rotateX(-18deg) rotateY(-180deg) rotateZ(-90deg) translateX(0);
-  }
-  90% {
-    transform: rotateX(180deg) rotateY(-90deg) rotateZ(-360deg) translateX(0);
+    transform: rotateX(180deg) rotateY(360deg) rotateZ(0deg) translateX(0);
   }
   100% {
-    transform: rotateY(90deg);
-  }
-}
-@keyframes rotate3 {
-  0% {
-    transform: rotateX(-180deg) rotateY(-90deg) rotateZ(90deg) translateX(0);
-  }
-  10% {
-    transform: rotateX(-90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
-  }
-  30% {
-    transform: rotateX(180deg) rotateY(-270deg) rotateZ(180deg) translateX(0);
-  }
-  50% {
-    transform: rotateX(90deg) rotateY(90deg) rotateZ(-90deg) translateX(0);
-  }
-  70% {
-    transform: rotateX(18deg) rotateY(270deg) rotateZ(180deg) translateX(0);
-  }
-  90% {
-    transform: rotateX(90deg) rotateY(-180deg) rotateZ(360deg) translateX(0);
-  }
-  100% {
-    transform: rotateX(-90deg);
-  }
-}
-@keyframes rotate4 {
-  0% {
-    transform: rotateX(-180deg) rotateY(-90deg) rotateZ(-90deg) translateX(0);
-  }
-  10% {
-    transform: rotateX(270deg) rotateY(-180deg) rotateZ(360deg) translateX(0);
-  }
-  30% {
-    transform: rotateX(180deg) rotateY(270deg) rotateZ(180deg) translateX(0);
-  }
-  50% {
-    transform: rotateX(-90deg) rotateY(90deg) rotateZ(90deg) translateX(0);
-  }
-  70% {
-    transform: rotateX(18deg) rotateY(-270deg) rotateZ(180deg) translateX(0);
-  }
-  90% {
-    transform: rotateX(-90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
-  }
-  100% {
-    transform: rotateX(90deg);
-  }
-}
-@keyframes rotate5 {
-  0% {
     transform: rotateX(-180deg) rotateY(-90deg) rotateZ(-180deg) translateX(0);
   }
-  10% {
-    transform: rotateX(270deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
-  }
-  30% {
-    transform: rotateX(180deg) rotateY(270deg) rotateZ(180deg) translateX(0);
-  }
-  50% {
-    transform: rotateX(-90deg) rotateY(90deg) rotateZ(-90deg) translateX(0);
-  }
-  70% {
-    transform: rotateX(18deg) rotateY(270deg) rotateZ(180deg) translateX(0);
-  }
-  90% {
-    transform: rotateX(90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
+}
+@keyframes ranged-attack-animation {
+  0% {
+    transform: rotateX(90deg) rotateY(360deg) rotateZ(0deg) translateX(0);
   }
   100% {
-    transform: rotateY(-90deg);
+    transform: rotateX(-180deg) rotateY(-180deg) rotateZ(-180deg) translateX(0);
   }
 }
-@keyframes rotate6 {
+@keyframes ranged-block-animation {
   0% {
-    transform: rotateX(270deg) rotateY(-90deg) rotateZ(180deg) translateX(0);
-  }
-  10% {
-    transform: rotateX(180deg) rotateY(90deg) rotateZ(360deg) translateX(0);
-  }
-  30% {
-    transform: rotateX(180deg) rotateY(-30deg) rotateZ(-180deg) translateX(0);
-  }
-  50% {
-    transform: rotateX(90deg) rotateY(270deg) rotateZ(-90deg) translateX(0);
-  }
-  70% {
-    transform: rotateX(18deg) rotateY(-180deg) rotateZ(90deg) translateX(0);
-  }
-  90% {
-    transform: rotateX(-90deg) rotateY(180deg) rotateZ(-360deg) translateX(0);
+    transform: rotateX(90deg) rotateY(360deg) rotateZ(0deg) translateX(0);
   }
   100% {
-    transform: rotateX(0deg);
+    transform: rotateX(-90deg) rotateY(-180deg) rotateZ(-180deg) translateX(0);
+  }
+}
+@keyframes token-steal-animation {
+  0% {
+    transform: rotateX(180deg) rotateY(360deg) rotateZ(0deg) translateX(0);
+  }
+  100% {
+    transform: rotateX(-90deg) rotateY(0deg) rotateZ(0deg) translateX(0);
   }
 }
