--- a/src/web-client/src/components/pages/Game/components/Dice/dice.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/dice.scss
@@ -1,8 +1,36 @@
 .dice {
-  width: 30px;
-  padding: 20px;
-  border: 2px solid gray;
-  background-color: #fff;
+  width: 60px;
+  height: 60px;
+  margin: 15px;
+  position: relative;
+  transform-style: preserve-3d;
+  user-select: none;
+  animation-iteration-count: 1;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+
+  > div {
+    height: 60px;
+    width: 60px;
+    position: absolute;
+    background-color: #211c1c;
+    border: 4px solid #403535;
+  }
+
+  img {
+    width: 30px;
+    margin: 5px;
+    padding: 10px;
+    position: absolute;
+    filter: invert(100%) sepia(0%) saturate(7489%) hue-rotate(194deg) brightness(104%)
+      contrast(102%);
+  }
+
+  .tokens {
+    border: 2px dashed #f39c12;
+    padding: 8px;
+  }
 
   &--toggleable {
     &:hover {
@@ -16,11 +44,35 @@
     margin-top: -10px;
   }
 
-  &--locked {
-    background: lightgrey;
+  .front {
+    transform: rotateY(0deg) translateZ(30px);
   }
+  .back {
+    transform: rotateX(180deg) translateZ(30px);
+  }
+  .right {
+    transform: rotateY(90deg) translateZ(30px);
+  }
+  .left {
+    transform: rotateY(-90deg) translateZ(30px);
+  }
+  .top {
+    transform: rotateX(90deg) translateZ(30px);
+  }
+  .bottom {
+    transform: rotateX(-90deg) translateZ(30px);
+  }
+}
 
-  &--tokens {
-    border: 2px dashed blue;
+.roll {
+  animation-name: roll-animation;
+}
+
+@keyframes roll-animation {
+  0% {
+    transform: rotateX(90deg) rotateY(360deg) rotateZ(0deg) translateX(0);
+  }
+  100% {
+    transform: rotateX(-180deg) rotateY(-180deg) rotateZ(-180deg) translateX(0);
   }
 }
