feat: update background, create contentbox

--- a/src/web-client/src/components/shared/Player/Player.scss
+++ b/src/web-client/src/components/shared/Player/Player.scss
@@ -4,7 +4,7 @@ $player__name: orange;
 $player__title: #606060;
 
 .player {
-  font-family: 'Signika' sans-serif;
+  font-family: 'Signika', sans-serif;
   display: flex;
   flex-grow: 1;
   align-items: center;
