--- a/src/web-client/src/components/pages/Dashboard/components/News/News.scss
+++ b/src/web-client/src/components/pages/Dashboard/components/News/News.scss
@@ -6,7 +6,7 @@ $player__title: #606060;
 .news {
   flex: 0.35;
   min-width: 300px;
-  height: 330px;
+  height: auto;
 
   &__header {
     background-color: $primary;
@@ -27,12 +27,9 @@ $player__title: #606060;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-
-    min-height: 135px;
-    padding: 0 25px 10px 25px;
-
-    background-color: rgba(33, 28, 28, 0.7);
-    color: #e4bd8d;
+    box-sizing: border-box;
+    padding: 10px 0;
+    min-height: 165px;
 
     &__title {
       color: $player__name;
@@ -50,6 +47,8 @@ $player__title: #606060;
       justify-content: space-between;
       color: $player__name;
       font-size: 0.75rem;
+      font-weight: bold;
+      color: orange;
     }
   }
 }
