--- a/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
+++ b/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
 
-  background: url('./assets/background.png') no-repeat center center fixed;
+  background: url('./assets/background.jpg') no-repeat center center fixed;
   background-size: cover;
 
   main {
@@ -15,20 +15,28 @@
     margin: auto;
     max-width: 1040px;
     position: relative;
-    top: 25%;
-    min-height: 240px;
+    top: 20%;
     justify-content: space-between;
 
-    h1 {
-      font-family: 'signika', sans-serif;
-      color: #211c1c;
-      line-height: 0;
+    .content-box {
+      flex: 0.8;
+      display: flex;
+      flex-direction: column;
+
+      &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: 225px;
+      }
     }
 
     p {
+      font-size: 1rem;
       text-align: center;
-      width: 600px;
-      color: rgba(0, 0, 0, 0.75);
+      margin-top: 20px;
+      width: 400px;
     }
 
     input {
