feat: work in progress animate button on time

--- a/src/web-client/src/components/pages/Game/components/ContinueButton/ContinueButton.scss
+++ b/src/web-client/src/components/pages/Game/components/ContinueButton/ContinueButton.scss
@@ -1,20 +1,33 @@
-.continue-button {
+.continue-button-container {
   position: absolute;
   top: 50%;
   left: 85%;
 
-  border: 0;
-  background-color: red;
-  color: #fff;
-  padding: 20px;
-  transform: translate(0, -50%);
+  > button {
+    border-top-left-radius: 5px;
+    min-width: 200px;
+    font-family: 'Signika', sans-serif;
+    font-size: 1rem;
+    text-transform: uppercase;
+    position: relative;
+    width: auto;
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 5px;
+    border: solid 1px #f39c12;
+    background: #e67e22;
+    color: #794d1f;
+    text-shadow: 1px 1px #f39c12;
+    text-align: center;
+    padding: 16px 18px 14px;
+    background: linear-gradient(to left, #ce711e 50%, #e67e22 50%);
+    background-size: 200% 100%;
+    box-shadow: 0px 6px 0px #d35400;
 
-  &:hover {
-    cursor: pointer;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.8;
+    &:active {
+      box-shadow: 0px 2px 0px #d35400;
+      position: relative;
+      top: 4px;
+    }
   }
 }
