--- a/src/web-client/src/components/pages/Game/components/ContinueButton/ContinueButton.scss
+++ b/src/web-client/src/components/pages/Game/components/ContinueButton/ContinueButton.scss
@@ -14,18 +14,17 @@
     display: inline-block;
     text-decoration: none;
     border-radius: 5px;
-    border: solid 1px #f39c12;
-    background: #e67e22;
-    color: #794d1f;
-    text-shadow: 1px 1px #f39c12;
     text-align: center;
     padding: 16px 18px 14px;
+    margin-bottom: 20px;
+    border: solid 1px #f39c12;
+    color: #794d1f;
+    text-shadow: 1px 1px #f39c12;
+    box-shadow: 0px 6px 0px #d35400;
     background: linear-gradient(to left, #ce711e 50%, #e67e22 50%);
     background-size: 200% 100%;
-    box-shadow: 0px 6px 0px #d35400;
 
     &:active {
-      box-shadow: 0px 2px 0px #d35400;
       position: relative;
       top: 4px;
     }
