feat: button component, merged topbar

--- a/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
+++ b/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
@@ -50,3 +50,22 @@
     }
   }
 }
+
+@media (max-width: 575.98px) {
+  .game-state-waiting {
+    main {
+      .content-box {
+        width: 90vw;
+        &__content {
+          p {
+            width: 300px;
+          }
+        }
+      }
+
+      input {
+        display: none;
+      }
+    }
+  }
+}
