--- a/src/web-client/src/components/pages/Dashboard/Dashboard.scss
+++ b/src/web-client/src/components/pages/Dashboard/Dashboard.scss
@@ -54,6 +54,7 @@ $player__title: #606060;
         display: inline-block;
         color: #ecf0f1;
         text-decoration: none;
+        text-shadow: 1px 1px #f39c12;
         border-radius: 5px;
         border: solid 1px #f39c12;
         background: #e67e22;
@@ -92,25 +93,6 @@ $player__title: #606060;
   .dashboard {
     .container {
       width: 100%;
-    }
-
-    .topbar {
-      height: 70px;
-
-      .player {
-        &__avatar {
-          flex-basis: 135px;
-          img {
-            width: 100px;
-            height: 100px;
-            border-radius: 4px solid green;
-          }
-        }
-
-        &__info {
-          height: 70px;
-        }
-      }
     }
 
     main {
