feat: add hover effect

--- a/src/web-client/src/components/pages/Game/components/Dice/dice.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/dice.scss
@@ -36,6 +36,12 @@
     &:hover {
       cursor: pointer;
     }
+
+    .active {
+      &:hover {
+        box-shadow: 0px 0px 20px 3px rgba(243, 156, 18, 1);
+      }
+    }
   }
 
   &--kept {
