--- a/src/web-client/src/components/pages/Game/components/Dice/DiceGrid/DiceGrid.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/DiceGrid/DiceGrid.scss
@@ -5,4 +5,11 @@
   display: flex;
   justify-content: center;
   align-self: flex-end;
+
+  > div {
+    width: 60px;
+    height: 60px;
+    margin: 15px;
+    position: relative;
+  }
 }
