refactor: cleanup DiceGrid

--- a/src/web-client/src/components/pages/Game/components/Dice/dice.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/dice.scss
@@ -47,6 +47,10 @@
     margin-top: -20px;
   }
 
+  &--placeholder {
+    visibility: hidden;
+  }
+
   .front {
     transform: rotateY(0deg) translateZ(30px);
   }
