Dice Sorting Animation (#49)
* feat: add dice sort animation

--- a/src/web-client/src/components/pages/Game/components/Dice/DiceGrid/DiceGrid.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/DiceGrid/DiceGrid.scss
@@ -5,4 +5,13 @@
   display: flex;
   justify-content: center;
   align-self: flex-end;
+
+  &__container {
+    height: 60px;
+    position: relative;
+
+    > div {
+      position: absolute;
+    }
+  }
 }
