--- a/src/web-client/src/components/pages/Game/components/Dice/Dice.scss
+++ b/src/web-client/src/components/pages/Game/components/Dice/Dice.scss
@@ -10,41 +10,11 @@
   animation-fill-mode: forwards;
 
   > div {
-    height: 60px;
-    width: 60px;
+    height: 100%;
+    width: 100%;
     position: absolute;
     background-color: #211c1c;
     border: 4px solid #403535;
-  }
-
-  img {
-    width: 30px;
-    margin: 5px;
-    padding: 10px;
-    position: absolute;
-    filter: invert(100%) sepia(0%) saturate(7489%) hue-rotate(194deg) brightness(104%)
-      contrast(102%);
-  }
-
-  .tokens {
-    border: 2px dashed #f39c12;
-    padding: 8px;
-  }
-
-  &--toggleable {
-    &:hover {
-      cursor: pointer;
-    }
-
-    .active {
-      &:hover {
-        box-shadow: 0px 0px 20px 3px rgba(243, 156, 18, 1);
-      }
-    }
-  }
-
-  &--placeholder {
-    visibility: hidden;
   }
 
   .front {
@@ -65,10 +35,39 @@
   .bottom {
     transform: rotateX(-90deg) translateZ(30px);
   }
+
+  &--toggleable {
+    &:hover {
+      cursor: pointer;
+    }
+
+    .front {
+      &:hover {
+        box-shadow: 0px 0px 20px 3px rgba(243, 156, 18, 1);
+      }
+    }
+  }
+
+  &--placeholder {
+    visibility: hidden;
+  }
+
+  &--rolling {
+    animation-name: roll-animation;
+  }
 }
 
-.roll {
-  animation-name: roll-animation;
+.face {
+  width: 60%;
+  margin: 10%;
+  padding: 10%;
+  position: absolute;
+  filter: invert(100%) sepia(0%) saturate(7489%) hue-rotate(194deg) brightness(104%) contrast(102%);
+
+  &--tokens {
+    border: 2px dashed #f39c12;
+    width: calc(60% - 4px);
+  }
 }
 
 @keyframes roll-animation {
