--- a/src/web-client/src/components/pages/Game/components/Favor/FavorArea/FavorArea.scss
+++ b/src/web-client/src/components/pages/Game/components/Favor/FavorArea/FavorArea.scss
@@ -1,7 +1,5 @@
 .favor-area {
-  align-self: flex-start;
-  flex: 1 1 auto;
-  justify-content: flex-end;
-
   display: flex;
+  flex: 0.2;
+  flex-direction: column;
 }
