--- a/src/web-client/src/components/shared/Topbar/Topbar.scss
+++ b/src/web-client/src/components/shared/Topbar/Topbar.scss
@@ -1,67 +1,41 @@
-$primary: #211c1c;
-$border: #403535;
-$player__name: orange;
-$player__title: #606060;
-
 .topbar {
-  width: 100vw;
-  height: 45px;
-  background-color: $primary;
-  border-top: 8px solid $border;
-  border-bottom: 8px solid $border;
+  width: 100%;
+  height: 5rem;
+
+  background-color: #211c1c;
+  border-top: 8px solid #403535;
+  border-bottom: 8px solid #403535;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 1040px;
+    height: 100%;
+    margin-left: auto;
+  }
 
   &--game {
     display: flex;
-    justify-content: center;
-  }
-
-  &__center {
-    display: flex;
-    justify-content: center;
     position: relative;
-    width: 365px;
-    height: 265px;
-    clip-path: polygon(15% 30%, 85% 30%, 100% 0, 0 0);
-    box-sizing: border-box;
-    background-color: $border;
 
-    &:after {
-      content: '';
-      left: 5px;
-      top: -3px;
+    height: 3rem;
+    border-top: 4px solid #403535;
+    border-bottom: 4px solid #403535;
+    justify-content: center;
+    align-items: center;
+
+    svg {
       position: absolute;
-      width: 355px;
-      height: 255px;
-      clip-path: polygon(15% 30%, 85% 30%, 100% 0, 0 0);
-      background-color: $primary;
+      z-index: 1;
     }
 
-    span {
-      z-index: 10;
+    &__title {
+      margin-top: 5px;
+      font-family: 'Signika', sans-serif;
       color: orange;
-      line-height: 75px;
-      font-family: 'signika', sans-serif;
-      font-size: 1rem;
-    }
-  }
-}
-
-@media (max-width: 575.98px) {
-  .topbar {
-    height: 30px;
-
-    &__center {
-      width: 310px;
-      height: 210px;
-
-      &:after {
-        width: 300px;
-        height: 200px;
-      }
-
-      span {
-        line-height: 55px;
-      }
+      z-index: 2;
     }
   }
 }
