refactor: remove dice grid

--- a/src/web-client/src/components/pages/Game/components/GameBoard/GameBoard.scss
+++ b/src/web-client/src/components/pages/Game/components/GameBoard/GameBoard.scss
@@ -45,9 +45,27 @@
       justify-content: unset;
     }
 
-    .dice-grid {
+    .dice-area {
       order: 2;
       align-self: flex-start;
+    }
+  }
+}
+
+.dice-area {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  display: flex;
+  justify-content: center;
+  align-self: flex-end;
+
+  &__container {
+    height: 60px;
+    position: relative;
+
+    > div {
+      position: absolute;
     }
   }
 }
