--- a/src/web-client/src/components/pages/Game/components/PlayerCard/PlayerCard.scss
+++ b/src/web-client/src/components/pages/Game/components/PlayerCard/PlayerCard.scss
@@ -19,6 +19,7 @@
     border-radius: 0.25rem;
     margin-left: -1.25rem;
     padding: 0.75rem 2.5rem;
+    width: 10rem;
 
     h2 {
       color: orange;
