--- a/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
+++ b/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
@@ -26,9 +26,8 @@
       &__content {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         align-items: center;
-        height: 225px;
+        padding-bottom: 20px;
       }
     }
 
