feat: add favor animations

--- a/src/web-client/src/components/pages/Game/components/GameBoard/GameBoard.scss
+++ b/src/web-client/src/components/pages/Game/components/GameBoard/GameBoard.scss
@@ -48,8 +48,9 @@
   }
 
   .favor-area {
+    z-index: 10;
     position: relative;
-    top: -3.5rem;
+    top: -1.75rem;
     left: 4rem;
   }
 
@@ -69,7 +70,7 @@
       order: 1;
       align-self: flex-end;
       justify-content: unset;
-      top: 3.5rem;
+      top: 1.75rem;
       left: -4rem;
     }
 
