--- a/src/web-client/src/components/pages/Game/components/FavorCard/FavorCard.scss
+++ b/src/web-client/src/components/pages/Game/components/FavorCard/FavorCard.scss
@@ -1,6 +1,12 @@
 .favor-card {
   width: 20rem;
-  overflow: hidden;
+  margin-bottom: 0.25rem;
+
+  &--clickable {
+    .favor-card__info {
+      cursor: pointer;
+    }
+  }
 
   &__info {
     display: flex;
@@ -9,8 +15,6 @@
     padding: 0.5rem 1.5rem;
     border-radius: 0.25rem;
     border: 4px solid #403535;
-    margin-bottom: 0.25rem;
-    cursor: pointer;
 
     h2 {
       color: orange;
@@ -34,7 +38,13 @@
     background: white;
     border: 2px 0px solid #e8e8e8;
     margin: 0 0.25rem;
-    margin-top: -0.25rem;
+    overflow: hidden;
+    max-height: 0;
+    transition: all 0.5s;
+
+    &--active {
+      max-height: 160px;
+    }
   }
 }
 
@@ -48,6 +58,7 @@
     color: #606060;
     font-size: 0.75rem;
     line-height: 1rem;
+    min-width: 9rem;
   }
 
   &__cost {
@@ -57,7 +68,9 @@
     color: #606060;
     border-radius: 0.25rem;
     border: 2px solid orange;
-    padding: 0 0.25rem;
+    padding: 0.25rem;
+    font-size: 0.75rem;
+    line-height: 1rem;
 
     svg {
       fill: orange;
@@ -69,11 +82,19 @@
   &__activate {
     border-radius: 0.25rem;
     color: white;
-    background: orange;
     font-size: 0.875rem;
     line-height: 1.25rem;
     padding: 0.25rem 0.5rem;
     border: none;
-    cursor: pointer;
+    outline: none;
+
+    &--active {
+      background: orange;
+      cursor: pointer;
+
+      &:hover {
+        background: #d48900;
+      }
+    }
   }
 }
