feat: enable customizing game settings (#72)

--- a/src/web-client/src/components/shared/ContentBox/ContentBox.scss
+++ b/src/web-client/src/components/shared/ContentBox/ContentBox.scss
@@ -24,7 +24,7 @@ $player__title: #606060;
 
   &__content {
     background-color: rgba(33, 28, 28, 0.7);
-    padding: 0 25px 10px 25px;
+    padding: 10px 25px 10px 25px;
     color: #e4bd8d;
   }
 }
