--- a/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
+++ b/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
 
-  background: url('./assets/background.jpg') no-repeat center center fixed;
+  background: url('../../../assets/background.jpg') no-repeat center center fixed;
   background-size: cover;
 
   main {
