--- a/src/web-client/src/components/pages/Game/components/PlayerCard/PlayerCard.scss
+++ b/src/web-client/src/components/pages/Game/components/PlayerCard/PlayerCard.scss
@@ -78,4 +78,28 @@
       margin-right: 0.5rem;
     }
   }
+
+  &__ready {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 70%;
+    z-index: 20;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 3px solid #211c1c;
+    background-color: #403535;
+
+    .icon--check {
+      width: 20px;
+      fill: rgb(16, 185, 159);
+    }
+
+    .icon--cross {
+      width: 15px;
+      fill: rgb(220, 38, 38);
+    }
+  }
 }
