feat: re-add share box

--- a/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
+++ b/src/web-client/src/components/pages/Game/components/GameState/GameStateWaiting/GameStateWaiting.scss
@@ -36,6 +36,15 @@
     }
   }
 
+  &__center {
+    display: flex;
+    justify-content: space-between;
+
+    .content-box {
+      margin: 15px;
+    }
+  }
+
   main {
     display: flex;
     flex-direction: column;
