--- a/src/web-client/src/components/pages/Dashboard/Dashboard.scss
+++ b/src/web-client/src/components/pages/Dashboard/Dashboard.scss
@@ -8,7 +8,8 @@ $player__title: #606060;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+
   background: url('./assets/background.jpg') no-repeat center center fixed;
   background-size: cover;
 
@@ -20,7 +21,7 @@ $player__title: #606060;
   }
 
   .topbar {
-    width: 100vw;
+    width: 100%;
     height: 80px;
     background-color: $primary;
     border-top: 8px solid $border;
@@ -28,10 +29,9 @@ $player__title: #606060;
   }
 
   main {
-    margin: auto;
+    width: 100%;
+    margin: 10rem auto 0 auto;
     max-width: 1040px;
-    position: relative;
-    top: 20%;
     display: flex;
     justify-content: space-between;
 
@@ -96,7 +96,7 @@ $player__title: #606060;
     }
 
     main {
-      margin-top: 1rem;
+      margin: 5rem auto 0 auto;
       width: 90%;
       top: 50px;
       flex-direction: column;
