--- a/src/web-client/src/components/pages/Game/components/GameState/GameStateCreating/GameStateCreating.scss
+++ b/src/web-client/src/components/pages/Game/components/GameState/GameStateCreating/GameStateCreating.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 
   background: url('../../../assets/background.jpg') no-repeat center center fixed;
   background-size: cover;
@@ -69,12 +69,6 @@
         .rc-slider {
           padding: 10px 0;
         }
-
-        button {
-          margin-top: 35px;
-          display: block;
-          margin-left: auto;
-        }
       }
     }
 
@@ -84,6 +78,44 @@
 
     .rc-slider-mark-text-active {
       color: orange;
+    }
+  }
+
+  &__actions {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .game-state-creating {
+    .container {
+      margin-top: 30px;
+      width: 90%;
+      top: 50px;
+      height: calc(100vh - 130px - 30px);
+      flex-direction: column;
+      justify-content: initial;
+      align-items: center;
+    }
+
+    &__choice {
+      display: flex;
+      flex-direction: column;
+      height: 80%;
+      width: 70%;
+
+      .content-box:hover {
+        box-shadow: none;
+
+        .content-box__content {
+          button {
+            visibility: visible;
+          }
+        }
+      }
     }
   }
 }
