--- a/src/web-client/src/components/pages/Game/components/FavorCard/FavorCard.scss
+++ b/src/web-client/src/components/pages/Game/components/FavorCard/FavorCard.scss
@@ -8,6 +8,10 @@
     }
   }
 
+  &--highlight {
+    box-shadow: 0px 0px 12px 3px rgba(243, 156, 18, 1);
+  }
+
   &__info {
     display: flex;
     flex-direction: column;
